BUG#18676 when cluster storage engine is down, misleading error message on create table with 4009.